--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 <html>
 
 <head>
- 
   <meta charset="UTF-8">
   <meta property="og:title" content="I rocked the vote Esri style! Vote for your 2015 Esri User Conference look." />
 	<meta property="og:url" content="http://www.esri.com/uc" />
-
   <title>User Conference</title>
-		
 	<link rel="stylesheet" href="assets/css/main.css">
 	<link rel="stylesheet" href="assets/css/uc-voting.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -18,14 +15,14 @@
 	<script type="text/javascript">stLight.options({publisher: "d9526bbf-1b0a-48c9-a3eb-b09b66e07952"});</script>
 	<script src="http://webapps-cdn-dev.esri.com/CDN/components/vote-api/vote-api.js"></script>
 	<script src="assets/js/uc-voting.js"></script>
-	</head>
+</head>
 
 <body>
        
-		<div class="uc-banner" style="background: #f7f7f7 url(//www.esri.com/~/media/2B093C860120405C98C1DAA89E8716BF) top center no-repeat !important;">
+		<div class="uc-banner">
 				<div class="container">
 					<div class="grid-100 uc-header">
-						<h1>VOTE NOW FOR THE 2015 UC LOOK!</h1>
+						<h1>VOTE FOR THE 2016 ESRI UC LOOK NOVEMBER 8 - 15</h1>
 					</div>
 		  	</div>
 				<div class="logos-wrapper clearfix">
@@ -36,7 +33,7 @@
 						<div class="gray-bar">
 							<div class="choose-wrap">
 								<div class="check"></div>
-								<div class="choose" data-selection="1">Vote</div>
+								<div class="choose" data-selection="1">CHOOSE</div>
 								<div class="clear"></div>
 							</div>
 						</div>
@@ -49,7 +46,7 @@
 						<div class="gray-bar">
 							<div class="choose-wrap">
 								<div class="check"></div>
-								<div class="choose" data-selection="2">Vote</div>
+								<div class="choose" data-selection="2">CHOOSE</div>
 								<div class="clear"></div>
 							</div>
 						</div>
@@ -62,7 +59,7 @@
 						<div class="gray-bar">
 							<div class="choose-wrap">
 								<div class="check"></div>
-								<div class="choose" data-selection="3">Vote</div>
+								<div class="choose" data-selection="3">CHOOSE</div>
 								<div class="clear"></div>
 							</div>
 						</div>
@@ -75,7 +72,7 @@
 						<div class="gray-bar">
 							<div class="choose-wrap">
 								<div class="check"></div>
-								<div class="choose" data-selection="4">Vote</div>
+								<div class="choose" data-selection="4">CHOOSE</div>
 								<div class="clear"></div>
 							</div>
 						</div>
