Code clean up, removed code that is no longer needed.

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 				<br>
 				<div class="container">
 					<div class="grid-100">
-						<h3>Esri User Conference is all about you and that includes the look. Vote now! Vote often! You have until November 18th to cast your vote(s).</h3>
-						<p>We look forward to seeing you July 20-24 in San Diego!</p>
+						<h3>Esri User Conference is all about you and that includes the look. Vote now! Vote often! You have until November 25th to cast your vote(s).</h3>
+						<p>We look forward to seeing you June 27 - July 1 in San Diego!</p>
 					</div>	
 				</div>
 
